@@ -212,7 +212,7 @@
   SF-DRAWABLE    "Chrome mask"       0
   SF-ADJUSTMENT _"Chrome saturation" '(-80 -100 100 1 10 0 0)
   SF-ADJUSTMENT _"Chrome lightness"  '(-47 -100 100 1 10 0 0)
-  SF-ADJUSTMENT _"Chrome factor"     '(.75 0 1 .1 .01 2 0)
+  SF-ADJUSTMENT _"Chrome factor"     '(0.75 0 1 0.1 0.01 2 0)
   SF-FILENAME   _"Environment map"
                 (string-append gimp-data-directory
                               "/scripts/images/beavis.jpg")
