@@ -101,8 +101,8 @@
   "RGB* GRAY*"
   SF-IMAGE       "Image" 0
   SF-DRAWABLE    "Drawable" 0
-  SF-ADJUSTMENT _"Amplitude"        '(10  1  101 1 10 1 0)
-  SF-ADJUSTMENT _"Wavelength"       '(10 .10 100 1 10 1 0)
+  SF-ADJUSTMENT _"Amplitude"        '(10 1   101 1 10 1 0)
+  SF-ADJUSTMENT _"Wavelength"       '(10 0.1 100 1 10 1 0)
   SF-ADJUSTMENT _"Number of frames" '(6  1   512 1 10 0 1)
   SF-TOGGLE     _"Invert direction" FALSE
 )
